Added HTML classes and styles for Japanese characters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Make simple sentences about your name, age, and nationality</li>
       <li>Recall basic vocabulary including numbers, countries, occupations, and family members</li>
     </ul>
-    <div class="prereqs">
+    <div class="note">
     <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, 
       as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.</p>
     <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.</p>
@@ -51,43 +51,57 @@
       <ul>Before we dive into Japanese grammar, let's learn some basic greetings and everyday phrases. You may have heard some of these before in Japanese media and pop culture. 
         If so, you're coming into Japanese with a head start! Look over these phrases and try saying them a few times before going to the first grammar lessons.</ul>
       <div class="vocab-container">
-        <li>おはようございます。= Good morning.</li>
-        <li>おはよう。= Good morning. (casual)</li>
-        <li>こんにちは <strong>*</strong> = Good afternoon. / Hello.</li>
-        <li>こんばんは。<strong>*</strong> = Good evening.</li>
-        <li>おやすみなさい。= Good night.</li>
-        <li>おやすみ。= Good night. (casual)</li>
-        <li>さようなら。= Goodbye. (has the nuance of a prolonged farewell)</li>
-        <li>じゃあね。= Bye. / See you later. (casual)</li>
-        <li>すみません。= Excuse me.</li>
-        <li>ごめんなさい。= I'm sorry.</li>		
-        <li>ごめん。= Sorry. (casual)</li>
-        <li>ありがとうございます。= Thank you.</li>
-        <li>ありがとう。= Thanks. (casual)</li>
-        <li>はじめまして。= How do you do? / Nice to meet you. (Said as a greeting when meeting someone new)</li>
-        <li>よろしくおねがいします。 = Nice to meet you. (Said when introducing oneself following one's name; also used as a greeting/polite phrase in other situations)</li>
-        <li>おなまえは？<strong>*</strong> = What's your name?</li>
-        <li>はい。/ いいえ。= Yes / No</li> 
+        <li><code class="kana" lang="ja-jp">おはようございます。</code>= Good morning.</li>
+        <li><code class="kana" lang="ja-jp">おはよう。</code>= Good morning. (casual)</li>
+        <li><code class="kana" lang="ja-jp">こんにちは</code> <strong>*</strong> = Good afternoon. / Hello.</li>
+        <li><code class="kana" lang="ja-jp">こんばんは。</code> <strong>*</strong> = Good evening.</li>
+        <li><code class="kana" lang="ja-jp">おやすみなさい。</code>= Good night.</li>
+        <li><code class="kana" lang="ja-jp">おやすみ。</code>= Good night. (casual)</li>
+        <li><code class="kana" lang="ja-jp">さようなら。</code>= Goodbye. (has the nuance of a prolonged farewell)</li>
+        <li><code class="kana" lang="ja-jp">じゃあね。</code>= Bye. / See you later. (casual)</li>
+        <li><code class="kana" lang="ja-jp">すみません。</code>= Excuse me.</li>
+        <li><code class="kana" lang="ja-jp">ごめんなさい。</code>= I'm sorry.</li>		
+        <li><code class="kana" lang="ja-jp">ごめん。</code>= Sorry. (casual)</li>
+        <li><code class="kana" lang="ja-jp">ありがとうございます。</code>= Thank you.</li>
+        <li><code class="kana" lang="ja-jp">ありがとう。</code>= Thanks. (casual)</li>
+        <li><code class="kana" lang="ja-jp">はじめまして。</code>= How do you do? / Nice to meet you. (Said as a greeting when meeting someone new)</li>
+        <li><code class="kana" lang="ja-jp">よろしくおねがいします。</code> = Nice to meet you. (Said when introducing oneself following one's name; also used as a greeting/polite phrase in other situations)</li>
+        <li><code class="kana" lang="ja-jp">おなまえは？</code><strong>*</strong> = What's your name?</li>
+        <li><code class="kana" lang="ja-jp">はい。/ いいえ。</code>= Yes / No</li> 
       </div>
       <div class="note">
-        <p><strong>*</strong> The は at the end of these phrases is pronounced like わ.</p>
+        <p><strong>*</strong> The <code class="kana" lang="ja-jp">は</code> at the end of these phrases is pronounced like 
+          <code class="kana" lang="ja-jp">わ.</code></p>
       </div>
       </section>
  
  <section class="main-section" id="Grammar:_“I_Am”_-_NounはNounです">
-   <header>Grammar: “I Am” - NounはNounです</header>
-   <p>The grammar particle は marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
-     The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker は is the most 
-     fundamental of these particles. In learning Hiragana, you probably learned that は is pronounced like わ when used as the subject marker. 
+   <header>Grammar: “I Am” - Noun<code class="kana">は</code>Noun<code class="kana">です</code></header>
+   <p>The grammar particle 
+     <code class="inline-code" lang="ja-jp">は</code> 
+    marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
+     The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 
+     <code class="inline-code" lang="ja-jp">は</code> 
+     is the most 
+     fundamental of these particles. In learning Hiragana, you probably learned that 
+     <code class="inline-code" lang="ja-jp">は</code> 
+     is pronounced like 
+     <code class="inline-code" lang="ja-jp">わ</code> 
+     when used as the subject marker. 
      This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
-   <p>The word です is used to complete a sentence following a noun. です is like a period at the end of a sentence that makes something 'what it is.' 
-     It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 
-     は and です, we can make some simple sentences that mean “____ is _____.”</p>
-   <code>わたしはトムです。<br>
+
+   <p>The word <code class="inline-code">です</code> is used to complete a sentence following a noun. <code class="inline-code">です</code> is like a period 
+    at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” 
+    By putting some nouns in their proper places with 
+    <code class="inline-code">は</code> and <code class="inline-code">です</code>, we can make some simple sentences that mean “____ is _____.”</p>
+
+    <!-- Use second imported font for kana characters in these blocks -->
+   <code><code class="kana">わたしはトムです。</code><br>
     I am Tom.<br>
-    かのじょはせんせいです。<br>
+    <code class="kana">かのじょはせんせいです。</code><br>
     She is a teacher.<br>
    </code>
+
    <div class="note">
      <h2>Note: Null-Subject Language</h2>
      <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to 
@@ -173,7 +187,7 @@
     as you should be able to grasp the pattern of the numbers after twenty. Note that the numbers four and seven have multiple readings. 
     The readings of these numbers are usually interchangeable. The alternative pronunciations よん (four) and なな (seven) are based in
     cultural superstitions around the "shi" sound in these numbers, which sound similar to the Japanese word for “death.” 
-    (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">this Wikipedia article</a> for more on this superstition).</p> 
+    (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">Wikipedia</a> for more on this superstition).</p> 
   <p>Look over these numbers and practice reading them aloud.</p>
   <div class="vocab-container">
   <!-- Learn how to sort this list into multiple list items per line to make this div more presentable -->
@@ -301,12 +315,12 @@
     <div class="note">
       <p>(Note: そうですか = Is that so? / I see; used in conversation to acknowledge what has been said to you)</p>
     </div>
-  <ul>Please translate these Japanese sentences into English:</ul>
+  <ul>Translate these Japanese sentences into English:</ul>
     <li>かれのおかあさんはスペインじんです。</li>
     <li>わたしのおじさんはいしゃです。</li>
     <li>おとうとは９さいですか。 / いいえ、１０さいです。 / ああ、そうですか。</li>
   </ul>
-  <ul>Please translate these English sentences into Japanese:</ul>
+  <ul>Translate these English sentences into Japanese:</ul>
     <li>Robert is French.</li>
     <li>(My) younger sister is 20 years old.</li>
     <li>(My) grandmother's name is Mary.</li>
