Updated HTML classes and styles in main

--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
     By putting some nouns in their proper places with 
     <code class="inline-code">は</code> and <code class="inline-code">です</code>, we can make some simple sentences that mean “____ is _____.”</p>
 
-    <!-- Use second imported font for kana characters in these blocks -->
-   <code><code class="jp-sentence">わたしはトムです。</code>
+   <code><code class="sample-sentence">わたしはトムです。</code>
     I am Tom.
-    <code class="jp-sentence">かのじょはせんせいです。</code>
+    <code class="sample-sentence">かのじょはせんせいです。</code>
     She is a teacher.
    </code>
 
@@ -150,9 +149,9 @@
     takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement 
     and add <code class="inline-code">か</code> to the end to make it a question.
   </p>
-  <code><code class="jp-sentence">がくせいですか。</code>
+  <code><code class="sample-sentence">がくせいですか。</code>
   Are you a student? 
-  <code class="jp-sentence">アメリカじんですか。</code>
+  <code class="sample-sentence">アメリカじんですか。</code>
   Are you (an) American?
   </code>
 </section>
@@ -198,34 +197,34 @@
   <div class="vocab-container">
   <!-- Learn how to sort this list into multiple list items per line to make this div more presentable -->
   <ul>
-    <li>1 <code class="kana">(いち)</code></li>	
-    <li>2 <code class="kana">(に)</code></li>		
-    <li>3 <code class="kana">(さん)</code></li>
-    <li>4 <code class="kana">(し / よん)</code></li>		
-    <li>5 <code class="kana">(ご)</code></li>		
-    <li>6 <code class="kana">(ろく)</code></li>	
-    <li>7 <code class="kana">(しち / なな)</code></li>	
-    <li>8 <code class="kana">(はち)</code></li>	
-    <li>9 <code class="kana">(きゅう)</code></li>	
-    <li>10 <code class="kana">(じゅう)</code></li>	
-    <li>11 <code class="kana">(じゅういち)</code></li>  
-    <li>12 <code class="kana">(じゅうに)</code></li>	
-    <li>13 <code class="kana">(じゅうさん)</code></li>	
-    <li>14 <code class="kana">(じゅうよん)</code></li>	
-    <li>15 <code class="kana">(じゅうご)</code></li>	
-    <li>16 <code class="kana">(じゅうろく)</code></li>
-    <li>17 <code class="kana">(じゅうなな)</code></li>	
-    <li>18 <code class="kana">(じゅうはち)</code></li>	
-    <li>19 <code class="kana">(じゅうきゅう)</code></li>	
-    <li>20 <code class="kana">(にじゅう)</code></li>	
-    <li>30 <code class="kana">(さんじゅう)</code></li>	
-    <li>40 <code class="kana">(よんじゅう)</code></li>	
-    <li>50 <code class="kana">(ごじゅう)</code></li>	
-    <li>60 <code class="kana">(ろくじゅう)</code></li>	
-    <li>70 <code class="kana">(ななじゅう)</code></li>	
-    <li>80 <code class="kana">(はちじゅう)</code></li>	
-    <li>90 <code class="kana">(きゅうじゅう)</code></li>	
-    <li>100 <code class="kana">(ひゃく)</code></li>
+    <li>1<code class="kana">(いち)</code></li>	
+    <li>2<code class="kana">(に)</code></li>		
+    <li>3<code class="kana">(さん)</code></li>
+    <li>4<code class="kana">(し / よん)</code></li>		
+    <li>5<code class="kana">(ご)</code></li>		
+    <li>6<code class="kana">(ろく)</code></li>	
+    <li>7<code class="kana">(しち / なな)</code></li>	
+    <li>8<code class="kana">(はち)</code></li>	
+    <li>9<code class="kana">(きゅう)</code></li>	
+    <li>10<code class="kana">(じゅう)</code></li>	
+    <li>11<code class="kana">(じゅういち)</code></li>  
+    <li>12<code class="kana">(じゅうに)</code></li>	
+    <li>13<code class="kana">(じゅうさん)</code></li>	
+    <li>14<code class="kana">(じゅうよん)</code></li>	
+    <li>15<code class="kana">(じゅうご)</code></li>	
+    <li>16<code class="kana">(じゅうろく)</code></li>
+    <li>17<code class="kana">(じゅうなな)</code></li>	
+    <li>18<code class="kana">(じゅうはち)</code></li>	
+    <li>19<code class="kana">(じゅうきゅう)</code></li>	
+    <li>20<code class="kana">(にじゅう)</code></li>	
+    <li>30<code class="kana">(さんじゅう)</code></li>	
+    <li>40<code class="kana">(よんじゅう)</code></li>	
+    <li>50<code class="kana">(ごじゅう)</code></li>	
+    <li>60<code class="kana">(ろくじゅう)</code></li>	
+    <li>70<code class="kana">(ななじゅう)</code></li>	
+    <li>80<code class="kana">(はちじゅう)</code></li>	
+    <li>90<code class="kana">(きゅうじゅう)</code></li>	
+    <li>100<code class="kana">(ひゃく)</code></li>
   </ul>
   </div>
 
@@ -238,9 +237,9 @@
   </p>
   <p>To ask for an age using the <code class="inline-code">か</code> suffix, use this phrase: <code class="inline-code">なんさいですか。</code></p>
   <p>An example of this question-and-answer exchange:</p>
-  <code><code class="jp-sentence">なんさいですか。</code>
+  <code><code class="sample-sentence">なんさいですか。</code>
     How old are you?
-    <code class="jp-sentence">２５さいです。</code>
+    <code class="sample-sentence">２５さいです。</code>
     I am twenty-five years old.
     </code>
 </section>
@@ -265,11 +264,11 @@
     <code class="inline-code">の</code> can also be used to group 
     many other things in relation to one another, such as a combination of city name + country.</p>
 
-  <code><code class="jp-sentence">わたしのいえ</code>
+  <code><code class="sample-sentence">わたしのいえ</code>
     My house
-    <code class="jp-sentence">わたしのおかあさんはせんせいです。</code>
+    <code class="sample-sentence">わたしのおかあさんはせんせいです。</code>
     My mother is a teacher.
-    <code class="jp-sentence">カナダのトロント</code>
+    <code class="sample-sentence">カナダのトロント</code>
     Toronto, Canada (note that the country name comes first in Japanese, as in “Canada's Toronto” or “Toronto of Canada.”</code>
 </section>
 
@@ -279,21 +278,21 @@
     <strong>Give It a Try!</strong> exercises that follow.</p>
   <div class="vocab-container">
   <ul>
-    <li>おかあさん = mother</li>	
-    <li>おとうさん = father</li>
-    <li>おにいさん = older brother</li>
-    <li>おねえさん = older sister</li>	
-    <li>おとうと = younger brother</li>	
-    <li>いもうと = younger sister</li>
-    <li>おじいさん = grandfather</li>	
-    <li>おばあさん = grandmother</li>		
-    <li>おばさん = aunt</li>
-    <li>おじさん = uncle</li>	
-    <li>いとこ = cousin</li>	
-    <li>いぬ = dog</li>	
-    <li>ねこ = cat</li>	
-    <li>とり = bird</li>	
-    <li>きんぎょ = goldfish</li>
+    <li><code class="kana">おかあさん</code> = mother</li>	
+    <li><code class="kana">おとうさん</code> = father</li>
+    <li><code class="kana">おにいさん</code> = older brother</li>
+    <li><code class="kana">おねえさん</code> = older sister</li>	
+    <li><code class="kana">おとうと</code> = younger brother</li>	
+    <li><code class="kana">いもうと</code> = younger sister</li>
+    <li><code class="kana">おじいさん</code> = grandfather</li>	
+    <li><code class="kana">おばあさん</code> = grandmother</li>		
+    <li><code class="kana">おばさん</code> = aunt</li>
+    <li><code class="kana">おじさん</code> = uncle</li>	
+    <li><code class="kana">いとこ</code> = cousin</li>	
+    <li><code class="kana">いぬ</code> = dog</li>	
+    <li><code class="kana">ねこ</code> = cat</li>	
+    <li><code class="kana">とり</code> = bird</li>	
+    <li><code class="kana">きんぎょ</code> = goldfish</li>
   </ul>
   </div>
 </section>
@@ -301,9 +300,9 @@
 <section class="main-section" id="Give_It_a_Try!_#3">
   <header>Give It a Try! #3</header>
   <ul>Translate these Japanese sentences into English:</ul>
-    <li>かのじょのおかあさんはかんごしです。</li>
-    <li>かれのおとうとは１０さいです。</li>
-    <li>いぬのなまえはポチです。</li>
+    <li><code class="kana">かのじょのおかあさんはかんごしです。</code></li>
+    <li><code class="kana">かれのおとうとは１０さいです。</code></li>
+    <li><code class="kana">いぬのなまえはポチです。</code></li>
   </ul>
   <ul>Now translate these English sentences into Japanese:</ul>
     <li>My father is an office worker.</li>
@@ -317,21 +316,21 @@
   <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing 
     this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
   <h2>Meeting Someone New</h2>
-    <p>Read this sample conversation and complete the underlined segments with your own answers.</p>
-    <code>Takuya: はじめまして。たくやです。おなまえは？<br>
+    <p>Read this sample dialogue and complete the underlined portions with your own answers.</p>
+    <code class="dialogue">Takuya: <code class="sample-sentence">はじめまして。たくやです。おなまえは？</code><br>
       You: ______________________。よろしくおねがいします。<br>
-      Takuya: アメリカじんですか。<br>
+      Takuya: <code class="sample-sentence">アメリカじんですか。</code><br>
       You: _____________________________________。<br>
-      Takuya: そうですか。なんさいですか。<br>
+      Takuya: <code class="sample-sentence">そうですか。なんさいですか。</code><br>
       You: __________________________________。<br>
-      Takuya: そうですか。じゃあ、よろしくおねがいします。</code>
+      Takuya: <code class="sample-sentence">そうですか。じゃあ、よろしくおねがいします。</code></code>
     <div class="note">
-      <p>(Note: そうですか = Is that so? / I see; used in conversation to acknowledge what has been said to you)</p>
+      <p><code class="kana">そうですか</code> = Is that so? / I see; used in conversation to acknowledge what has been said to you</p>
     </div>
   <ul>Translate these Japanese sentences into English:</ul>
-    <li>かれのおかあさんはスペインじんです。</li>
-    <li>わたしのおじさんはいしゃです。</li>
-    <li>おとうとは９さいですか。 / いいえ、１０さいです。 / ああ、そうですか。</li>
+    <li><code class="kana">かれのおかあさんはスペインじんです。</code></li>
+    <li><code class="kana">わたしのおじさんはいしゃです。</code></li>
+    <li><code class="kana">おとうとは９さいですか。 / いいえ、１０さいです。 / ああ、そうですか。</code></li>
   </ul>
   <ul>Translate these English sentences into Japanese:</ul>
     <li>Robert is French.</li>
