Added scroll property to nav

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   
   <nav id="navbar">
     <header>Introduction to Japanese: Lesson 1</header>
-    <ul>
-      <li><a class="nav-link" href="#Preface">Preface</a></li>
-      <li><a class="nav-link" href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a></li>
-      <li><a class="nav-link" href="#Grammar:_“I_Am”_-_NounはNounです">Grammar: “I Am” - NounはNounです</a></li>
-      <li><a class="nav-link" href="#Vocabulary:_Japanese_Occupations">Vocabulary: Japanese Occupations</a></li>
-      <li><a class="nav-link" href="#Give_It_a_Try!_#1">Give It a Try! #1</a></li>
-      <li><a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_か_Question_Marker">Grammar: Are You? Is She? - The か Question Marker</a></li>
-      <li><a class="nav-link" href="#Vocabulary:_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a></li>
-      <li><a class="nav-link" href="#Vocabulary:_Numbers_and_Ages">Vocabulary: Numbers and Ages</a></li>
-      <li><a class="nav-link" href="#Give_It_a_Try!_#2">Give It a Try! #2</a></li>
-      <li><a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_の_Possessive_Marker">Grammar: My, Hers, His - The の Possessive Marker</a></li>
-      <li><a class="nav-link" href="#Vocabulary:_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a></li>
-      <li><a class="nav-link" href="#Give_It_a_Try!_#3">Give It a Try! #3</a></li>
-      <li><a class="nav-link" href="#Review_Exercises">Review Exercises</a></li>
-    </ul>
-</nav>
+      <div class="nav-scroll">
+      <a class="nav-link" href="#Preface">Preface</a>
+      <a class="nav-link" href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
+      <a class="nav-link" href="#Grammar:_“I_Am”_-_NounはNounです">Grammar: “I Am” - NounはNounです</a>
+      <a class="nav-link" href="#Vocabulary:_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
+      <a class="nav-link" href="#Give_It_a_Try!_#1">Give It a Try! #1</a>
+      <a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_か_Question_Marker">Grammar: Are You? Is She? - The か Question Marker</a>
+      <a class="nav-link" href="#Vocabulary:_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
+      <a class="nav-link" href="#Vocabulary:_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
+      <a class="nav-link" href="#Give_It_a_Try!_#2">Give It a Try! #2</a>
+      <a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_の_Possessive_Marker">Grammar: My, Hers, His - The の Possessive Marker</a>
+      <a class="nav-link" href="#Vocabulary:_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
+      <a class="nav-link" href="#Give_It_a_Try!_#3">Give It a Try! #3</a>
+      <a class="nav-link" href="#Review_Exercises">Review Exercises</a>
+      </div>
+  </nav>
 
 <!-- Use color-styled code tags to note Japanese text in the sections instead of quote brackets? -->
 
