--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
       </div>
   </nav>
 
-<!-- Use color-styled code tags to note Japanese text in the sections instead of quote brackets? -->
-
 <main id="main-doc">
     
   <section class="main-section" id="Preface">
@@ -42,15 +40,19 @@
       <li>Recall basic vocabulary including numbers, countries, occupations, and family members</li>
     </ul>
     <div class="note">
-    <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, 
-      as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.</p>
-    <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.</p>
+      <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, 
+        as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.</p>
+      <p>See <a 
+        href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" 
+        target="blank_">
+        Tae Kim's Guide to Japanese</a> 
+        for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.</p>
     </div>    
-    </section>
+  </section>
 
-    <section class="main-section" id="Japanese_Greetings_and_Useful_Phrases">
-      <header>Japanese Greetings and Useful Phrases</header>
-      <ul>Before we dive into Japanese grammar, let's learn some basic greetings and everyday phrases. You may have heard some of these before in Japanese media and pop culture. 
+  <section class="main-section" id="Japanese_Greetings_and_Useful_Phrases">
+    <header>Japanese Greetings and Useful Phrases</header>
+    <ul>Before we dive into Japanese grammar, let's learn some basic greetings and everyday phrases. You may have heard some of these before in Japanese media and pop culture. 
         If so, you're coming into Japanese with a head start! Look over these phrases and try saying them a few times before going to the first grammar lessons.</ul>
       <div class="vocab-container">
         <li><code class="kana">おはようございます。</code>= Good morning.</li>
@@ -71,31 +73,42 @@
         <li><code class="kana">おなまえは？</code><strong>*</strong> = What's your name?</li>
         <li><code class="kana">はい。/ いいえ。</code>= Yes / No</li> 
       </div>
-      <div class="note">
-        <p><strong>*</strong> The <code class="kana">は</code> at the end of these phrases is pronounced like 
-          <code class="kana">わ.</code></p>
-      </div>
-      </section>
+    </ul>
+    <div class="note">
+      <p><strong>*</strong> The 
+        <code class="kana">は</code> 
+      at the end of these phrases is pronounced like 
+          <code class="kana">わ.</code>
+      </p>
+    </div>
+  </section>
  
  <section class="main-section" id="Grammar:_“I_Am”_-_NounはNounです">
    <header>Grammar: “I Am” - Noun<code class="kana">は</code>Noun<code class="kana">です</code></header>
    <p>The grammar particle 
      <code class="inline-code">は</code> 
-    marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
+      marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
      The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 
      <code class="inline-code">は</code> 
-     is the most 
-     fundamental of these particles. In learning Hiragana, you probably learned that 
+     is the most fundamental of these particles. In learning Hiragana, you probably learned that 
      <code class="inline-code">は</code> 
      is pronounced like 
      <code class="inline-code">わ</code> 
      when used as the subject marker. 
-     This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
+     This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.
+    </p>
 
-   <p>The word <code class="inline-code">です</code> is used to complete a sentence following a noun. <code class="inline-code">です</code> is like a period 
-    at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” 
+   <p>The word 
+     <code class="inline-code">です</code> 
+     is used to complete a sentence following a noun. 
+     <code class="inline-code">です</code> 
+     is like a period at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” 
     By putting some nouns in their proper places with 
-    <code class="inline-code">は</code> and <code class="inline-code">です</code>, we can make some simple sentences that mean “____ is _____.”</p>
+    <code class="inline-code">は</code> 
+    and 
+    <code class="inline-code">です</code>, 
+    we can make some simple sentences that mean “____ is _____.”
+  </p>
 
    <code><code class="sample-sentence">わたしはトムです。</code>
     I am Tom.
@@ -106,16 +119,21 @@
    <div class="note">
      <h2>Note: Null-Subject Language</h2>
      <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to 
-       the speaker and listener. For example, if a person named Yuki introduces himself, <code class="kana">ゆうきです</code> rather than<br> 
-       <code class="kana">わたしはゆうきです</code> is still a correct way to say “I am Yuki” because it is clear that Yuki is speaking of 
-       himself and giving his name.</p>
+       the speaker and listener. For example, if a person named Yuki introduces himself, 
+       <code class="kana">ゆうきです</code> 
+       rather than<br> 
+       <code class="kana">わたしはゆうきです</code> 
+       is still a correct way to say “I am Yuki” because it is clear that Yuki is speaking of himself and giving his name.
+      </p>
    </div>
+
 </section>
 
 <section class="main-section" id="Vocabulary:_Japanese_Occupations">
   <header>Vocabulary: Japanese Occupations</header>
   <ul>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the <strong>Give It a Try!</strong>
-    exercises that follow.</ul>
+    exercises that follow.
+  </ul>
   <div class="vocab-container">
     <li><code class="kana">せんせい</code> = teacher</li>
     <li><code class="kana">がくせい</code> = student</li>		
@@ -143,12 +161,18 @@
 
 <section class="main-section" id="Grammar:_Are_You?_Is_She?_-_The_か_Question_Marker">
   <header>Grammar: Are You? Is She? - The <code class="kana">か</code> Question Marker</header>
-  <p>Let's add another grammar particle to what we know. The <code class="inline-code">か</code> particle marks a question, so changing our sentence ender 
-    <code class="inline-code">です</code> to <br>
+  <p>Let's add another grammar particle to what we know. The 
+    <code class="inline-code">か</code> 
+    particle marks a question, so changing our sentence ender 
+    <code class="inline-code">です</code> 
+    to <br>
     <code class="inline-code">ですか</code>
-    takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement 
-    and add <code class="inline-code">か</code> to the end to make it a question.
+    takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, 
+    because we can take the structure of an ordinary statement and add 
+    <code class="inline-code">か</code> 
+    to the end to make it a question.
   </p>
+
   <code><code class="sample-sentence">がくせいですか。</code>
   Are you a student? 
   <code class="sample-sentence">アメリカじんですか。</code>
@@ -159,7 +183,8 @@
 <section class="main-section" id="Vocabulary:_Countries_and_Nationalities">
   <header>Vocabulary: Countries and Nationalities</header>
   <p>Below is a list of country names in Japanese. Note that Japan and the East Asian countries are written in <em>Hiragana</em> 
-    (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.</p>
+    (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.
+  </p>
   <div class="vocab-container">
   <ul>
     <li><code class="kana">にほん</code> = Japan</li>
@@ -179,9 +204,13 @@
     <li><code class="kana">コロンビア</code> = Colombia</li>
   </ul>
   </div>
-  <p>To turn a country name into a nationality, simply add <code class="inline-code">じん</code> (meaning “person”) to the end of it. 
-    <code class="inline-code">にほんじん</code> means “Japanese” (a Japanese person), 
-    <code class="inline-code">メキシコじん</code> means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and 
+  <p>To turn a country name into a nationality, simply add 
+    <code class="inline-code">じん</code> 
+    (meaning “person”) to the end of it. 
+    <code class="inline-code">にほんじん</code> 
+    means “Japanese” (a Japanese person), 
+    <code class="inline-code">メキシコじん</code> 
+    means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and 
     refer back to this country list as we use these words in the grammar lessons that follow.
   </p>
 </section>
@@ -190,12 +219,20 @@
   <header>Vocabulary: Numbers and Ages</header>
   <p>Now let's practice reading numbers in Japanese. The numbers one through twenty are provided here, followed by the next few multiples of ten, 
     as you should be able to grasp the pattern of the numbers after twenty. Note that the numbers four and seven have multiple readings. 
-    The readings of these numbers are usually interchangeable. The alternative pronunciations <code class="inline-code">よん</code> (four) and 
-    <code class="inline-code">なな</code> (seven) are based in cultural superstitions around the "shi" sound in these numbers, which sound similar to 
-    the Japanese word for “death.” (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">Wikipedia</a> for more on this superstition).</p> 
+    The readings of these numbers are usually interchangeable. The alternative pronunciations 
+    <code class="inline-code">よん</code> 
+    (four) and 
+    <code class="inline-code">なな</code> 
+    (seven) are based in cultural superstitions around the "shi" sound in these numbers, which sound similar to 
+    the Japanese word for “death.” 
+    (See <a 
+          href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" 
+          target="blank_">Wikipedia
+        </a> 
+    for more on this superstition).
+  </p> 
   <p>Look over these numbers and practice reading them aloud.</p>
   <div class="vocab-container">
-  <!-- Learn how to sort this list into multiple list items per line to make this div more presentable -->
   <ul>
     <li>1<code class="kana">(いち)</code></li>	
     <li>2<code class="kana">(に)</code></li>		
@@ -229,13 +266,24 @@
   </div>
 
   <h2>Age: <code class="kana">さい</code></h2>
-  <p>To say someone's age, simply take a number and add the suffix <code class="inline-code">さい</code> (“years old”) to the end. 
-    <code class="inline-code">ろくさい</code> means “six years old,” <br>
+  <p>To say someone's age, simply take a number and add the suffix 
+    <code class="inline-code">さい</code> 
+    (“years old”) to the end. 
+    <code class="inline-code">ろくさい</code> 
+    means “six years old,” <br>
     <code class="inline-code">よんじゅうさい</code> 
     means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 
-    <code class="inline-code">はたち</code> without the <code class="inline-code">さい</code> suffix.
+    <code class="inline-code">はたち</code> 
+    without the 
+    <code class="inline-code">さい</code> 
+    suffix.
   </p>
-  <p>To ask for an age using the <code class="inline-code">か</code> suffix, use this phrase: <code class="inline-code">なんさいですか。</code></p>
+
+  <p>To ask for an age using the 
+    <code class="inline-code">か</code> 
+    suffix, use this phrase: 
+    <code class="inline-code">なんさいですか。</code>
+  </p>
   <p>An example of this question-and-answer exchange:</p>
   <code><code class="sample-sentence">なんさいですか。</code>
     How old are you?
@@ -258,24 +306,29 @@
 
 <section class="main-section" id="Grammar:_My,_Hers,_His_-_The_の_Possessive_Marker">
   <header>Grammar: My, Hers, His - The <code class="kana">の</code> Possessive Marker</header>
-  <p>The particle <code class="inline-code">の</code> is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 
-    <code class="inline-code">の</code> particle can be used to show that 
-    something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John's mother.” The particle 
-    <code class="inline-code">の</code> can also be used to group 
-    many other things in relation to one another, such as a combination of city name + country.</p>
+  <p>The particle 
+    <code class="inline-code">の</code> 
+    is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 
+    <code class="inline-code">の</code> 
+    particle can be used to show that something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John's mother.” The particle 
+    <code class="inline-code">の</code> 
+    can also be used to group many other things in relation to one another, such as a combination of city name + country.
+  </p>
 
   <code><code class="sample-sentence">わたしのいえ</code>
     My house
     <code class="sample-sentence">わたしのおかあさんはせんせいです。</code>
     My mother is a teacher.
     <code class="sample-sentence">カナダのトロント</code>
-    Toronto, Canada (note that the country name comes first in Japanese, as in “Canada's Toronto” or “Toronto of Canada.”</code>
+    Toronto, Canada (note that the country name comes first in Japanese, as in “Canada's Toronto” or “Toronto of Canada.”
+  </code>
 </section>
 
 <section class="main-section" id="Vocabulary:_Family_Members_and_Pets">
   <header>Vocabulary: Family Members and Pets</header>
   <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the 
-    <strong>Give It a Try!</strong> exercises that follow.</p>
+    <strong>Give It a Try!</strong> exercises that follow.
+  </p>
   <div class="vocab-container">
   <ul>
     <li><code class="kana">おかあさん</code> = mother</li>	
@@ -299,12 +352,12 @@
 
 <section class="main-section" id="Give_It_a_Try!_#3">
   <header>Give It a Try! #3</header>
-  <ul>Translate these Japanese sentences into English:</ul>
+  <ul>Translate these Japanese sentences into English:
     <li><code class="kana">かのじょのおかあさんはかんごしです。</code></li>
     <li><code class="kana">かれのおとうとは１０さいです。</code></li>
     <li><code class="kana">いぬのなまえはポチです。</code></li>
   </ul>
-  <ul>Now translate these English sentences into Japanese:</ul>
+  <ul>Now translate these English sentences into Japanese:
     <li>My father is an office worker.</li>
     <li>Her cat is two years old.</li>
     <li>(My) cousin's name is John.</li>
@@ -314,7 +367,9 @@
 <section class="main-section" id="Review_Exercises">
   <header>Review Exercises</header>
   <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing 
-    this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
+    this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.
+  </p>
+
   <h2>Meeting Someone New</h2>
     <p>Read this sample dialogue and complete the underlined portions with your own answers.</p>
     <code class="dialogue">Takuya: <code class="sample-sentence">はじめまして。たくやです。おなまえは？</code><br>
@@ -324,18 +379,19 @@
       Takuya: <code class="sample-sentence">そうですか。なんさいですか。</code><br>
       You: __________________________________。<br>
       Takuya: <code class="sample-sentence">そうですか。じゃあ、よろしくおねがいします。</code></code>
-    <div class="note">
-      <p><code class="kana">そうですか</code> = Is that so? / I see; used in conversation to acknowledge what has been said to you</p>
-    </div>
-  <ul>Translate these Japanese sentences into English:</ul>
+  <div class="note">
+    <p><code class="kana">そうですか</code> = Is that so? / I see; used in conversation to acknowledge what has been said to you</p>
+  </div>
+  <ul>Translate these Japanese sentences into English:
     <li><code class="kana">かれのおかあさんはスペインじんです。</code></li>
     <li><code class="kana">わたしのおじさんはいしゃです。</code></li>
     <li><code class="kana">おとうとは９さいですか。 / いいえ、１０さいです。 / ああ、そうですか。</code></li>
   </ul>
-  <ul>Translate these English sentences into Japanese:</ul>
+  <ul>Translate these English sentences into Japanese:
     <li>Robert is French.</li>
     <li>(My) younger sister is 20 years old.</li>
     <li>(My) grandmother's name is Mary.</li>
+  </ul>
 </section>
 </main>
 
