Deleted unneeded line breaks in main

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
      <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to 
        the speaker and listener. For example, if a person named Yuki introduces himself, 
        <code class="kana">ゆうきです</code> 
-       rather than<br> 
+       rather than
        <code class="kana">わたしはゆうきです</code> 
        is still a correct way to say “I am Yuki” because it is clear that Yuki is speaking of himself and giving his name.
       </p>
@@ -165,7 +165,7 @@
     <code class="inline-code">か</code> 
     particle marks a question, so changing our sentence ender 
     <code class="inline-code">です</code> 
-    to <br>
+    to 
     <code class="inline-code">ですか</code>
     takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, 
     because we can take the structure of an ordinary statement and add 
@@ -270,7 +270,7 @@
     <code class="inline-code">さい</code> 
     (“years old”) to the end. 
     <code class="inline-code">ろくさい</code> 
-    means “six years old,” <br>
+    means “six years old,” 
     <code class="inline-code">よんじゅうさい</code> 
     means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 
     <code class="inline-code">はたち</code> 
